miParserParser.py
# Generated from C:/Users/dilan/OneDrive - Estudiantes ITCR/Semestre I 2022/Compiladores/Proyecto/Proyecto/MiniPython\miParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class miParserParser ( Parser ):

    grammarFileName = "miParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'while'", "'do'", "'break'", 
                     "'for'", "'in'", "'begin'", "'end'", "'let'", "'const'", 
                     "'var'", "'continue'", "'return'", "'print'", "'package'", 
                     "'type'", "'def'", "'struct'", "'append'", "'len'", 
                     "','", "';'", "'.'", "':'", "':='", "'='", "'=='", 
                     "'+'", "'++'", "'+='", "'-'", "'--'", "'-='", "'/'", 
                     "'/='", "'*'", "'*='", "'!='", "'!'", "'>='", "'>'", 
                     "'<='", "'<'", "'%'", "'%='", "'&&'", "'&'", "'||'", 
                     "'|'", "'|='", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "DO", "BREAK", 
                      "FOR", "IN", "BEGIN", "END", "LET", "CONST", "VAR", 
                      "CONTINUE", "RETURN", "PRINT", "PACKAGE", "TYPE", 
                      "DEF", "STRUCT", "APPEND", "LEN", "COMA", "PyCOMA", 
                      "PUNTO", "DOSPUNTOS", "DOSPUNTOSIGUAL", "ASYGN", "EQUALS", 
                      "SUM", "SUM2", "SUMIGUAL", "RES", "RES2", "RESIGUAL", 
                      "DIV", "DIVIGUAL", "MUL", "MULIGUAL", "DIF", "ADMIRACION", 
                      "MAYORIGUAL", "MAYOR", "MENORIGUAL", "MENOR", "PORCENTAJE", 
                      "PORCENTAJEIGUAL", "AND2", "AND", "OR2", "OR", "ORIGUAL", 
                      "PARENTESISIZQ", "PARENTESISDER", "BRACKETIZQ", "BRACKETDER", 
                      "LLAVEIZQ", "LLAVEDER", "ID", "CHAR_LITERAL", "RAWSTRINGLITERAL", 
                      "INTLITERAL", "FLOATLITERAL", "DECIMAL_FLOAT_LIT", 
                      "HEX_FLOAT_LIT", "BLOK_COMMENT", "COMMENT", "WS", 
                      "NEWLINE", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_defStatement = 2
    RULE_argList = 3
    RULE_moreArgs = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_returnStatement = 8
    RULE_printStatement = 9
    RULE_assignStatement = 10
    RULE_functionCallStatement = 11
    RULE_expressionStatement = 12
    RULE_sequence = 13
    RULE_moreStatements = 14
    RULE_expression = 15
    RULE_comparison = 16
    RULE_additionExpression = 17
    RULE_additionFactor = 18
    RULE_multiplicationExpression = 19
    RULE_multiplicationFactor = 20
    RULE_elementExpression = 21
    RULE_elementAccess = 22
    RULE_expressionList = 23
    RULE_moreExpressions = 24
    RULE_primitiveExpression = 25
    RULE_listExpression = 26

    ruleNames =  [ "program", "statement", "defStatement", "argList", "moreArgs", 
                   "ifStatement", "whileStatement", "forStatement", "returnStatement", 
                   "printStatement", "assignStatement", "functionCallStatement", 
                   "expressionStatement", "sequence", "moreStatements", 
                   "expression", "comparison", "additionExpression", "additionFactor", 
                   "multiplicationExpression", "multiplicationFactor", "elementExpression", 
                   "elementAccess", "expressionList", "moreExpressions", 
                   "primitiveExpression", "listExpression" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    DO=4
    BREAK=5
    FOR=6
    IN=7
    BEGIN=8
    END=9
    LET=10
    CONST=11
    VAR=12
    CONTINUE=13
    RETURN=14
    PRINT=15
    PACKAGE=16
    TYPE=17
    DEF=18
    STRUCT=19
    APPEND=20
    LEN=21
    COMA=22
    PyCOMA=23
    PUNTO=24
    DOSPUNTOS=25
    DOSPUNTOSIGUAL=26
    ASYGN=27
    EQUALS=28
    SUM=29
    SUM2=30
    SUMIGUAL=31
    RES=32
    RES2=33
    RESIGUAL=34
    DIV=35
    DIVIGUAL=36
    MUL=37
    MULIGUAL=38
    DIF=39
    ADMIRACION=40
    MAYORIGUAL=41
    MAYOR=42
    MENORIGUAL=43
    MENOR=44
    PORCENTAJE=45
    PORCENTAJEIGUAL=46
    AND2=47
    AND=48
    OR2=49
    OR=50
    ORIGUAL=51
    PARENTESISIZQ=52
    PARENTESISDER=53
    BRACKETIZQ=54
    BRACKETDER=55
    LLAVEIZQ=56
    LLAVEDER=57
    ID=58
    CHAR_LITERAL=59
    RAWSTRINGLITERAL=60
    INTLITERAL=61
    FLOATLITERAL=62
    DECIMAL_FLOAT_LIT=63
    HEX_FLOAT_LIT=64
    BLOK_COMMENT=65
    COMMENT=66
    WS=67
    NEWLINE=68
    INDENT=69
    DEDENT=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miParserParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramASTContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.StatementContext)
            else:
                return self.getTypedRuleContext(miParserParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramAST" ):
                listener.enterProgramAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramAST" ):
                listener.exitProgramAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramAST" ):
                return visitor.visitProgramAST(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = miParserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = miParserParser.ProgramASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.statement()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miParserParser.IF) | (1 << miParserParser.WHILE) | (1 << miParserParser.FOR) | (1 << miParserParser.RETURN) | (1 << miParserParser.PRINT) | (1 << miParserParser.DEF) | (1 << miParserParser.LEN) | (1 << miParserParser.COMA) | (1 << miParserParser.EQUALS) | (1 << miParserParser.SUM) | (1 << miParserParser.RES) | (1 << miParserParser.MAYORIGUAL) | (1 << miParserParser.MAYOR) | (1 << miParserParser.MENORIGUAL) | (1 << miParserParser.MENOR) | (1 << miParserParser.PARENTESISIZQ) | (1 << miParserParser.BRACKETIZQ) | (1 << miParserParser.ID) | (1 << miParserParser.CHAR_LITERAL) | (1 << miParserParser.RAWSTRINGLITERAL) | (1 << miParserParser.INTLITERAL) | (1 << miParserParser.FLOATLITERAL))) != 0) or _la==miParserParser.NEWLINE:
                self.state = 55
                self.statement()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miParserParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatementDefStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def defStatement(self):
            return self.getTypedRuleContext(miParserParser.DefStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementDefStatementAST" ):
                listener.enterStatementDefStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementDefStatementAST" ):
                listener.exitStatementDefStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementDefStatementAST" ):
                return visitor.visitStatementDefStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementAssignStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStatement(self):
            return self.getTypedRuleContext(miParserParser.AssignStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementAssignStatementAST" ):
                listener.enterStatementAssignStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementAssignStatementAST" ):
                listener.exitStatementAssignStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementAssignStatementAST" ):
                return visitor.visitStatementAssignStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementPrintStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStatement(self):
            return self.getTypedRuleContext(miParserParser.PrintStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementPrintStatementAST" ):
                listener.enterStatementPrintStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementPrintStatementAST" ):
                listener.exitStatementPrintStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementPrintStatementAST" ):
                return visitor.visitStatementPrintStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementIfStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(miParserParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementIfStatementAST" ):
                listener.enterStatementIfStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementIfStatementAST" ):
                listener.exitStatementIfStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementIfStatementAST" ):
                return visitor.visitStatementIfStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementForStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(miParserParser.ForStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementForStatementAST" ):
                listener.enterStatementForStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementForStatementAST" ):
                listener.exitStatementForStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementForStatementAST" ):
                return visitor.visitStatementForStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementFunctionCallStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionCallStatement(self):
            return self.getTypedRuleContext(miParserParser.FunctionCallStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementFunctionCallStatementAST" ):
                listener.enterStatementFunctionCallStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementFunctionCallStatementAST" ):
                listener.exitStatementFunctionCallStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementFunctionCallStatementAST" ):
                return visitor.visitStatementFunctionCallStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementExpressionStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressionStatement(self):
            return self.getTypedRuleContext(miParserParser.ExpressionStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementExpressionStatementAST" ):
                listener.enterStatementExpressionStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementExpressionStatementAST" ):
                listener.exitStatementExpressionStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementExpressionStatementAST" ):
                return visitor.visitStatementExpressionStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementReturnStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStatement(self):
            return self.getTypedRuleContext(miParserParser.ReturnStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementReturnStatementAST" ):
                listener.enterStatementReturnStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementReturnStatementAST" ):
                listener.exitStatementReturnStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementReturnStatementAST" ):
                return visitor.visitStatementReturnStatementAST(self)
            else:
                return visitor.visitChildren(self)


    class StatementWhileStatementASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(miParserParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementWhileStatementAST" ):
                listener.enterStatementWhileStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementWhileStatementAST" ):
                listener.exitStatementWhileStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementWhileStatementAST" ):
                return visitor.visitStatementWhileStatementAST(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = miParserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = miParserParser.StatementDefStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.defStatement()
                pass

            elif la_ == 2:
                localctx = miParserParser.StatementIfStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.ifStatement()
                pass

            elif la_ == 3:
                localctx = miParserParser.StatementReturnStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.returnStatement()
                pass

            elif la_ == 4:
                localctx = miParserParser.StatementPrintStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.printStatement()
                pass

            elif la_ == 5:
                localctx = miParserParser.StatementWhileStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.whileStatement()
                pass

            elif la_ == 6:
                localctx = miParserParser.StatementForStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.forStatement()
                pass

            elif la_ == 7:
                localctx = miParserParser.StatementAssignStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 67
                self.assignStatement()
                pass

            elif la_ == 8:
                localctx = miParserParser.StatementFunctionCallStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 68
                self.functionCallStatement()
                pass

            elif la_ == 9:
                localctx = miParserParser.StatementExpressionStatementASTContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 69
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miParserParser.RULE_defStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefStatementASTContext(DefStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.DefStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(miParserParser.DEF, 0)
        def ID(self):
            return self.getToken(miParserParser.ID, 0)
        def PARENTESISIZQ(self):
            return self.getToken(miParserParser.PARENTESISIZQ, 0)
        def argList(self):
            return self.getTypedRuleContext(miParserParser.ArgListContext,0)

        def PARENTESISDER(self):
            return self.getToken(miParserParser.PARENTESISDER, 0)
        def DOSPUNTOS(self):
            return self.getToken(miParserParser.DOSPUNTOS, 0)
        def sequence(self):
            return self.getTypedRuleContext(miParserParser.SequenceContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefStatementAST" ):
                listener.enterDefStatementAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefStatementAST" ):
                listener.exitDefStatementAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefStatementAST" ):
                return visitor.visitDefStatementAST(self)
            else:
                return visitor.visitChildren(self)



    def defStatement(self):

        localctx = miParserParser.DefStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defStatement)
        try:
            localctx = miParserParser.DefStatementASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(miParserParser.DEF)
            self.state = 73
            self.match(miParserParser.ID)
            self.state = 74
            self.match(miParserParser.PARENTESISIZQ)
            self.state = 75
            self.argList()
            self.state = 76
            self.match(miParserParser.PARENTESISDER)
            self.state = 77
            self.match(miParserParser.DOSPUNTOS)
            self.state = 78
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miParserParser.RULE_argList

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EpsilonArgListASTContext(ArgListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.ArgListContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEpsilonArgListAST" ):
                listener.enterEpsilonArgListAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEpsilonArgListAST" ):
                listener.exitEpsilonArgListAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEpsilonArgListAST" ):
                return visitor.visitEpsilonArgListAST(self)
            else:
                return visitor.visitChildren(self)


    class MoreArgListASTContext(ArgListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.ArgListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(miParserParser.ID, 0)
        def moreArgs(self):
            return self.getTypedRuleContext(miParserParser.MoreArgsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoreArgListAST" ):
                listener.enterMoreArgListAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoreArgListAST" ):
                listener.exitMoreArgListAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoreArgListAST" ):
                return visitor.visitMoreArgListAST(self)
            else:
                return visitor.visitChildren(self)



    def argList(self):

        localctx = miParserParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argList)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [miParserParser.ID]:
                localctx = miParserParser.MoreArgListASTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(miParserParser.ID)
                self.state = 81
                self.moreArgs()
                pass
            elif token in [miParserParser.PARENTESISDER]:
                localctx = miParserParser.EpsilonArgListASTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoreArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miParserParser.RULE_moreArgs

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MoreArgsASTContext(MoreArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miParserParser.MoreArgsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.COMA)
            else:
                return self.getToken(miParserParser.COMA, i)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.ID)
            else:
                return self.getToken(miParserParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoreArgsAST" ):
                listener.enterMoreArgsAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoreArgsAST" ):
                listener.exitMoreArgsAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoreArgsAST" ):
                return visitor.visitMoreArgsAST(self)
            else:
                return visitor.visitChildren(self)



    def moreArgs(self):

        localctx = miParserParser.MoreArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_moreArgs)
        self._la = 0 # Token type
        try:
            localctx = miParserParser.MoreArgsASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miParserParser.COMA:
                self.state = 85
                self.match(miParserParser.COMA)
                self.state = 86
                self.match(miParserParser.ID)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(miParserParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def DOSPUNTOS(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.DOSPUNTOS)
            else:
                return self.getToken(miParserParser.DOSPUNTOS, i)

        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.SequenceContext)
            else:
                return self.getTypedRuleContext(miParserParser.SequenceContext,i)


        def ELSE(self):
            return self.getToken(miParserParser.ELSE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):
